# SatSVS

./: .gitignore  CLAUDE.md  pyproject.toml  readme.md
backup/: bokeh_test.py  datashader_test.py  interp_ant.py  pattern18.7.cut  plot_shapfile.py  read_cuts.py
input/: Config.xml
input/example_analysis_blocks/: com_contact_plan.xml  com_doppler.xml  com_gr2sp_budget.xml  com_gr2sp_budget_interference.xml  com_pfd.xml  com_sp2sp_budget.xml  cov_depth_of_coverage.xml  cov_ground_track.xml  cov_pass_time.xml  cov_satellite_contour.xml  cov_satellite_highest.xml  cov_satellite_pvt.xml  cov_satellite_sky_angles.xml  cov_satellite_visible.xml  cov_satellite_visible_grid.xml  cov_satellite_visible_id.xml  dat_latency.xml  dat_storage.xml  nav_accuracy.xml  nav_dilution_of_precision.xml  obs_aoi_revisit.xml  obs_swath_conical.xml  obs_swath_push_broom.xml  obs_sza_push_broom.xml  obs_sza_subsat.xml  obs_target_imaging.xml  orb_air_density.xml  orb_altitude.xml  orb_beta_angle.xml  orb_collision_alt_check.xml  orb_lifetime.xml  (+19 more)
output/: orbits.txt  user_cov_swath.nc  user_cov_swath.npy  user_sza_latitude.npy  user_sza_latitude_summer.npy
projects/: readme.md
src/: analysis.py  analysis_com.py  analysis_cov.py  analysis_dat.py  analysis_nav.py  analysis_obs.py  analysis_orb.py  analysis_pow.py  analysis_sat.py  antenna.py  config.py  config_checks.py  constants.py  install.py  logging_svs.py  main.py  misc_fn.py  plot_3d.py  plot_movie.py  propagation_hpop.py  report.py  segments.py  test.py
tests/: README.md  conftest.py  make_configs.py  run_test.py  test_analyses.py
(+228 files in other folders)
